# fundraising-website

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  TODO  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  tsconfig.json  usability test results.txt  wsgi.py
.github/: dependabot.yml
.github/dependabot/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  backup-postgres.yml  codeql-analysis.yml  codeql-config.yml  codeql.yml  deploy-railway.yml  django-tests.yml
api/: serializers.py  urls.py  views.py
docs/: DOCKER_SETUP.md  POSTGRESQL_SETUP.md  RESET_POSTGRES_PASSWORD.md  SMOKE_TEST_PLAN.md
e2e/: global-setup.ts  smoke.spec.ts  start-server.sh
e2e/auth/: smoke_admin.json  smoke_pw_user.json  smoke_test_user.json
fundraiser/: settings.py  urls.py  views.py  wsgi.py
fundraiser/settings/: base.py  dev.py  prod.py
team_fundraising/: admin.py  apps.py  email_backend.py  email_utils.py  forms.py  models.py  paypal.py  paypal_api.py  register.py  text.py  urls.py  views.py
team_fundraising/fixtures/: startingdata.json  testdata.json
team_fundraising/management/commands/: generate_small_photos.py  migrate_media_to_s3.py
team_fundraising/migrations/: 0001_initial.py  0002_auto_20181114_2213.py  0003_donation_date.py  0004_auto_20181203_0114.py  0005_auto_20181227_0244.py  0006_auto_20181227_0244.py  0007_auto_20181227_0318.py  0008_remove_fundraiser_user.py  0009_fundraiser_user.py  0010_auto_20190131_0011.py  0011_fundraiser_photo.py  0012_auto_20190221_0049.py  0013_auto_20190430_0149.py  0014_auto_20190615_2358.py  0015_remove_fundraiser_email.py  0016_auto_20190818_0111.py  0017_auto_20191004_2350.py  0018_campaign_active.py  0019_auto_20191221_0101.py  0020_auto_20200308_1152.py  0021_auto_20200308_1156.py  0022_auto_20200308_1207.py  0023_donation_tax_name.py  0024_campaign_default_fundraiser_amount.py  0025_auto_20230620_2352.py  0025_auto_20230620_2352_squashed_0026_auto_20230621_0858.py  0026_auto_20230621_0858.py  0026_fundraiser_team.py  0027_campaign_photo.py
team_fundraising/static/: ck_editor_override.css  fundraiser.css  fundraising.css  quill_custom.js  quill_override.css  thermometer.css  validation.js
team_fundraising/templates/: base.html  base_nonav.html  index.html
team_fundraising/tests/: test_donations.py  test_forms.py  test_models.py  test_paypal_api.py  test_paypal_views.py  test_signup.py  test_views.py
(+23 files in other folders)
