[tool.poetry]
name = "fundraising"
version = "2.1.0"
description = "An event fundraising website where individuals can create personal pages, set goals and raise money for the overall goal."
authors = ["Dominik Szopa <techdomi@gmail.com>"]
license = "MIT License"
readme = "README.md"

packages = [
    { include = "team_fundraising" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
certifi = "^2025.4.26"
chardet = "^5.1.0"
crispy-bootstrap4 = "^2024.10"
django = "^4.2.25"
django-crispy-forms = "^2.4"
django-debug-toolbar = "^5.2.0"
django-paypal = "^2.1"
idna = "^3.10"
pillow = "^11.2.1"
python-dotenv = "^1.1.0"
pytz = "^2025.2"
six = "^1.17.0"
sqlparse = "^0.5.3"
urllib3 = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
