[tool.poetry]
name = "fundraising"
version = "2.1.0"
description = "An event fundraising website where individuals can create personal pages, set goals and raise money for the overall goal."
authors = ["Dominik Szopa <techdomi@gmail.com>"]
license = "MIT License"
readme = "README.md"

packages = [
    { include = "team_fundraising" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
certifi = "^2025.11.12"
chardet = "^5.1.0"
crispy-bootstrap4 = "^2025.6"
django = ">=5.2.9,<6.0.0"
django-crispy-forms = "^2.5"
django-debug-toolbar = "^6.1.0"
django-paypal = "^2.1"
django-recaptcha = "^4.0.0"
idna = "^3.10"
pillow = "^12.0.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.2.1"
pytz = "^2025.2"
six = "^1.17.0"
sqlparse = "^0.5.5"
urllib3 = "^2.6.2"
boto3 = "^1.42.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
